2005-03-09  Mark McLoughlin  <markmc@redhat.com>

	* admin-tool/gconfviewer.py: cheesy view-only
	gconf-editor type thing.
	
	* admin-tool/Makefile.am: add gconfviewer.py
	
	* admin-tool/editorwindow.py: show the GConf
	viewer when a GConf element is activated.
	
	* lib/sources/gconfsource.py: fix silly.

2005-03-09  Mark McLoughlin  <markmc@redhat.com>
	
	* lib/userprofile.py:
	(ProfileSource.get_path_description): add stub for
	sources to implement giving descriptions for their
	paths.
	(UserProfile.get_source): lookup a source by name.
	
	* lib/sources/filessource.py:
	(FilesSource.get_path_description): return
	a description for menu files.
	
	* lib/sources/gconfsource.py:
	(GConfSource.get_path_description): return
	descriptions for .gconf.xml.defaults and
	.gconf.xml.mandatory.
	
	* admin-tool/editorwindow.py: Display the description
	for the path rather than the path itself.

2005-03-08  Mark McLoughlin  <markmc@redhat.com>

	* lib/storage.py:
	(ProfileStorage.revert): set the prefix correctly
	on the temporary directory.

2005-03-08  Mark McLoughlin  <markmc@redhat.com>

	* admin-tool/editorwindow.py: add a combo box for each
	element in the list to allow you to revert to previous
	versions of files or directories.

2005-03-08  Mark McLoughlin  <markmc@redhat.com>

	* lib/storage.py: bah, fix other place where timestamp
	was being saved as a date string.

Tue Mar  8 14:55:42 CET 2005 Daniel Veillard <veillard@redhat.com>

	* doc/flat.html doc/testing.html: fix a small formatting glitch
	  before pushing live

2005-03-07  Mark McLoughlin  <markmc@redhat.com>

	* lib/storage.py:
	(ProfileStorage.get_source),
	(ProfileStorage.revert): implement.
	(run_unit_tests): yet more unit tests.
	
	* admin-tool/editorwindow.py: allow reverting to
	previous versions of the profile.

2005-03-07  Mark McLoughlin  <markmc@redhat.com>

	This commit changes the metadata format again.

	* lib/storage.py: save a timestamp rather than date
	string for each revision.
	