@@ -1,3 +1,13 @@
+2005-03-10  Mark McLoughlin  <markmc@redhat.com>
+
+	* admin-tool/fileviewer.py: an even cheesier
+	text file viewer to go along with the cheesy
+	GConf viewer.
+	
+	* admin-tool/Makefile.am: add fileviewer.py
+	
+	* admin-tool/editorwindow.py: hook it up.
+
 2005-03-09  Mark McLoughlin  <markmc@redhat.com>
 
 	* admin-tool/gconfviewer.py: cheesy view-only
